web-infras/parser/tests/fixtures/esprima/es2017/async/invalid-await/invalid-await-declaration4/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,23)
1|x = { async f() { let await } }
 |                     ^
